k8s/talos/apps/portfolio-stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nordbye-service-stage
  namespace: stage-portfolio
spec:
  selector:
    app: stage-portfolio
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
