k8s/talos/apps/portfolio-stage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nordbye-stage
  namespace: stage-portfolio
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - portfolio-stage.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nordbye-service-stage
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
